--- a/TODO
+++ b/TODO
@@ -12,4 +12,5 @@ write backup script:
 
 handle running modules as stand-alone and give them useful cli guidance.
 
+fritzing diagram or schematic
 web interface (crib from picroscopy)
