--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
 check if pigpiod is running prior to calling dht stuff -- if not then disable temp/humidity stuff
 encode to mp4 from stream instead of a file to cut down on disk writes
-handle running out of disk space gracefully (user configurable threshold (% or absolute size?) to stop recording)
+add a countdown to the warmup sequence
 set up to use configuration files
 add all dependencies to README
+make output less verbose, maybe add formatting and ability to trigger video from terminal
+logging options
 
 write backup script:
 	should check once a day
@@ -14,3 +16,4 @@ handle running modules as stand-alone and give them useful cli guidance.
 
 fritzing diagram or schematic
 web interface (crib from picroscopy)
+optional live stream
