--- a/TODO
+++ b/TODO
@@ -4,12 +4,13 @@ add a countdown to the warmup sequence
 set up to use configuration files
 add all dependencies to README
 make output less verbose, maybe add formatting and ability to trigger video from terminal
-logging options
+add logging options
+    add disk space warning when we get to 2x DISK_FREE_LIMIT -- should send an email
 
 write backup script:
-	should check once a day
+	user configurable backup frequency (hours/days/weeks)
 	check for unencoded files and encode them (will be moot once stream encoding is written)
-	copy files that don’t match the current date
+	copy files that are newer than the last backup
 	verify they made it and delete the old ones
 
 handle running modules as stand-alone and give them useful cli guidance.
