--- a/TODO
+++ b/TODO
@@ -3,9 +3,9 @@ encode to mp4 from stream instead of a file to cut down on disk writes
 add a countdown to the warmup sequence
 set up to use configuration files
 add all dependencies to README
-make output less verbose, maybe add formatting and ability to trigger video from terminal
 add logging options
-    add disk space warning when we get to 2x DISK_FREE_LIMIT -- should send an email
+    add disk space WARNING when we get to 2x DISK_FREE_LIMIT -- should send an email
+    stop avconv writing to stdout, make it DEBUG level
 
 write backup script:
 	user configurable backup frequency (hours/days/weeks)
