--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 check if pigpiod is running prior to calling dht stuff -- if not then disable temp/humidity stuff
+check if camera is already in use and call exception if so.
 encode to mp4 from stream instead of a file to cut down on disk writes
 add a countdown to the warmup sequence
 set up to use configuration files
